# WorldStory

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  WorldStory.pro  main.cpp  setupenv.ps1
assets/: assets.qrc
assets/levels/: testLevel.xml
classes/: gamedisplay.cpp  gamedisplay.h  grid.cpp  grid.h  gridscene.cpp  gridscene.h  level.cpp  level.h  levelelement.h  scene.cpp  scene.h  tile.cpp  tile.h  tilefield.cpp  tilefield.h
cmake/: getlibs.cmake
creator/assets/: creatorassets.qrc
creator/assets/interface/: mainwindow.ui
creator/assets/style/: appstyle.qss
creator/classes/: cursor.cpp  cursor.h  editorscene.cpp  editorscene.h  mainwindow.cpp  mainwindow.h  player.h  viewport.cpp  viewport.h
src/: CMakeLists.txt  main.cpp
src/assets/: assets.qrc
src/assets/levels/: target.xml  testLevel.xml
src/assets/textures/: testTile.xcf
src/classes/: CMakeLists.txt  gamedisplay.cpp  gamedisplay.h  grid.cpp  grid.h  gridscene.cpp  gridscene.h  level.cpp  level.h  levelelement.h  scene.cpp  tile.cpp  tile.h
src/creator/: CMakeLists.txt  main.cpp
src/creator/assets/: creatorassets.qrc
src/creator/assets/icons/: icons.qrc
src/creator/assets/interface/: mainwindow.ui
src/creator/classes/: attributeeditor.cpp  attributeeditor.h  cursor.h  editorscene.cpp  editorscene.h  mainwindow.cpp  mainwindow.h  scenegridoverlay.cpp  scenegridoverlay.h  singleoptiontoolbar.cpp  singleoptiontoolbar.h  toolbar.cpp  toolbar.h  viewport.cpp  viewport.h  writer.h
src/creator/classes/tools/: eraser.cpp  eraser.h  pencil.cpp  pencil.h  selectiontool.cpp  selectiontool.h  tool.h
